...
// MARK: - Other

extension QuizEditView {

    enum InputType: Int, CaseIterable {
        /// タイトル
        case title
        /// 正解
        case correctAnswer
        /// 不正解1
        case incorrectAnswer1
        /// 不正解2
        case incorrectAnswer2
        /// 不正解3
        case incorrectAnswer3
        /// カテゴリ
        case quizType
        /// 表示フラグ
        case showHide

        var rowEditValue: RowEditValue {
            switch self {
            case .title:
                return Title()
            case .correctAnswer:
...
            let headerTitle: String = "不正解3"
        }

        private struct QuizType: RowEditValue {
            let placeholder: String = " クイズのカテゴリを選択してください"
            let accessibilityIdentifier: String = "quizType"
            let headerTitle: String = "クイズのカテゴリ"
        }

        private struct ShowHide: RowEditValue {
            let placeholder: String = " 表示・非表示"
            let accessibilityIdentifier: String = "showHide"
            let headerTitle: String = "表示"
...
